优化代码，修复发现的问题